feat/hotels paginated (#1)
* Add pagination to the hotel results WIP

* Merge pagination into GET /hotels: search + page + pageSize, PaginationDto
